Process XBL constructors right after the frame construction inInitialReflow().  Bug 377119, r+sr=sicking