layout/base/nsPresShell.cpp
@@ -2286,7 +2286,7 @@ PresShell::RepaintSelection(SelectionType aType)
 NS_IMETHODIMP
 PresShell::BeginObservingDocument()
 {
-  if (mDocument) {
+  if (mDocument && !mIsDestroying) {
     mDocument->AddObserver(this);
     if (mIsDocumentGone) {
       NS_WARNING("Adding a presshell that was disconnected from the document "
@@ -2460,6 +2460,24 @@ PresShell::InitialReflow(nscoord aWidth, nscoord aHeight)
     // Something in mFrameConstructor->ContentInserted may have caused
     // Destroy() to get called, bug 337586.
     NS_ENSURE_STATE(!mHaveShutDown);
+
+    // Run the XBL binding constructors for any new frames we've constructed
+    mDocument->BindingManager()->ProcessAttachedQueue();
+
+    // Constructors may have killed us too
+    NS_ENSURE_STATE(!mHaveShutDown);
+
+    // Now flush out pending restyles before we actually reflow, in
+    // case XBL constructors changed styles somewhere.
+    mFrameConstructor->ProcessPendingRestyles();
+
+    // And that might have run _more_ XBL constructors
+    NS_ENSURE_STATE(!mHaveShutDown);
+
+    // Now reget the root frame, since all that script might have affected it
+    // somehow.  Currently that can't happen, as long as mHaveShutDown is
+    // false, but let's not rely on that.
+    rootFrame = FrameManager()->GetRootFrame();
   }
 
   if (rootFrame) {
@@ -2508,9 +2526,6 @@ PresShell::InitialReflow(nscoord aWidth, nscoord aHeight)
                                                    nsITimer::TYPE_ONE_SHOT);
     }
   }
-
-  // Run the XBL binding constructors for any new frames we've constructed
-  mDocument->BindingManager()->ProcessAttachedQueue();
 
   return NS_OK; //XXX this needs to be real. MMP
 }
